--- a/admin/app/components/views/cmsfacilities.html
+++ b/admin/app/components/views/cmsfacilities.html
@@ -44,7 +44,8 @@
                     <div class="uk-form-controls"><input id="facilityPicture" type="file" class="uk-form-width-large"></div>
 
                 </div>
-                <button ng-click="addFacility()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingFacilities.add" ng-click="addFacility()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingFacilities.add" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -71,7 +72,8 @@
                     <div class="uk-form-controls"><input id="editImageFacility" type="file" class="uk-form-width-large"></div>
 
                 </div>
-                <button ng-click="updateFacility()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingFacilities.edit" ng-click="updateFacility()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingFacilities.edit" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -81,7 +83,9 @@
         <a class="uk-modal-close uk-close"></a>
         <div class="uk-width-1-1 uk-panel uk-text-center">
             <h2>Are you sure you want to delete this record?</h2>
-            <button ng-click="dropFacility()" class="uk-button-danger">Yes</button> <button class="uk-button uk-modal-close">No</button>
+            <button ng-show="!isLoadingFacilities.delete" ng-click="dropFacility()" class="uk-button-danger">Yes</button>
+            <button ng-show="isLoadingFacilities.delete" class="uk-button-danger"><i class="uk-icon-spin uk-icon-spinner"></i></button>
+            <button class="uk-button uk-modal-close">No</button>
         </div>
     </div>
 </div>
