--- a/admin/app/components/views/cmsactivities.html
+++ b/admin/app/components/views/cmsactivities.html
@@ -39,7 +39,8 @@
                     <div class="uk-form-controls"><input id="activityPicture" type="file" class="uk-form-width-large"></div>
 
                 </div>
-                <button ng-click="addActivity()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingActivity.add" ng-click="addActivity()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingActivity.add" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -62,7 +63,8 @@
                     <div class="uk-form-controls"><input id="editImageActivity" type="file" class="uk-form-width-large"></div>
 
                 </div>
-                <button ng-click="updateActivity()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingActivity.edit" ng-click="updateActivity()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingActivity.edit" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -72,7 +74,9 @@
         <a class="uk-modal-close uk-close"></a>
         <div class="uk-width-1-1 uk-panel uk-text-center">
             <h2>Are you sure you want to delete this record?</h2>
-            <button ng-click="dropActivity()" class="uk-button-danger">Yes</button> <button class="uk-button uk-modal-close">No</button>
+            <button ng-show="!isLoadingActivity.delete" ng-click="dropActivity()" class="uk-button-danger">Yes</button>
+            <button ng-show="isLoadingActivity.delete" class="uk-button-danger"><i class="uk-icon-spin uk-icon-spinner"></i></button>
+            <button class="uk-button uk-modal-close">No</button>
         </div>
     </div>
 </div>
