--- a/admin/app/components/views/login.html
+++ b/admin/app/components/views/login.html
@@ -11,7 +11,8 @@
                 <input class="uk-width-1-1 uk-form-large" ng-model="password" type="password" placeholder="Password">
             </div>
             <div class="uk-form-row">
-                <a class="uk-width-1-1 uk-button uk-button-primary uk-button-large" ng-click="login()">Login</a>
+                <a ng-show="!isLoadingLogin" class="uk-width-1-1 uk-button uk-button-primary uk-button-large" ng-click="login()">Login</a>
+                <a ng-show="isLoadingLogin" class="uk-width-1-1 uk-button uk-button-primary uk-button-large"><i class="uk-icon-spin uk-icon-spinner"></i></a>
             </div>
             <div class="uk-form-row uk-text-small">
                 <label class="uk-float-left"><input type="checkbox"> Remember Me</label>
