--- a/admin/app/directives/booking/views/inquiry.html
+++ b/admin/app/directives/booking/views/inquiry.html
@@ -18,7 +18,7 @@
         <td>{{data.subject}}</td>
         <td>
             <button ng-click="viewInquiries(data)" data-uk-modal="{target:'#viewinq'}" class="uk-button-primary uk-icon-eye "></button>
-            <button ng-click="deleteInquiry(data.id)" data-uk-modal="{target:'#delete'}" class="uk-button-danger uk-icon-close "></button>
+            <button ng-click="deleteInquiry(data.id)" data-uk-modal="{target:'#deleteInq'}" class="uk-button-danger uk-icon-close "></button>
         </td>
     </tr>
 
@@ -35,12 +35,14 @@
         </div>
     </div>
 </div>
-<div id="delete" class="uk-modal">
+<div id="deleteInq" class="uk-modal">
     <div class="uk-modal-dialog">
         <a class="uk-modal-close uk-close"></a>
         <div class="uk-width-1-1 uk-panel uk-text-center">
             <h2>Are you sure you want to delete this record?</h2>
-            <button ng-click="delete()" class="uk-button-danger">Yes</button> <button class="uk-button uk-modal-close">No</button>
+            <button ng-show="!isLoadingInquiry" ng-click="deleteInq()" class="uk-button-danger">Yes</button>
+            <button ng-show="isLoadingInquiry" class="uk-button-danger"><i class="uk-icon-spin uk-icon-spinner"></i></button>
+            <button class="uk-button uk-modal-close">No</button>
         </div>
     </div>
 </div>
