--- a/admin/app/directives/home/views/homefeature.html
+++ b/admin/app/directives/home/views/homefeature.html
@@ -25,7 +25,8 @@
                     <div class="uk-form-controls"><input id="imageFeature" type="file" class="uk-form-width-large"></div>
 
                 </div>
-                <button ng-click="addFeature()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingFeature.add" ng-click="addFeature()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingFeature.add" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -42,9 +43,9 @@
                 <div class="uk-form-row">
                     <label class="uk-form-label" for="">Picture</label>
                     <div class="uk-form-controls"><input id="editImageFeature" type="file" class="uk-form-width-large"></div>
-
                 </div>
-                <button ng-click="updateFeature()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingFeature.edit" ng-click="updateFeature()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingFeature.edit" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -54,7 +55,9 @@
         <a class="uk-modal-close uk-close"></a>
         <div class="uk-width-1-1 uk-panel uk-text-center">
             <h2>Are you sure you want to delete this record?</h2>
-            <button ng-click="dropFeature()" class="uk-button-danger">Yes</button> <button class="uk-button uk-modal-close">No</button>
+            <button ng-show="!isLoadingFeature.delete" ng-click="dropFeature()" class="uk-button-danger">Yes</button>
+            <button ng-show="isLoadingFeature.delete" class="uk-button-danger"><i class="uk-icon-spin uk-icon-spinner"></i></button>
+            <button class="uk-button uk-modal-close">No</button>
         </div>
     </div>
 </div>
