--- a/admin/app/directives/widget/views/aboutfaq.html
+++ b/admin/app/directives/widget/views/aboutfaq.html
@@ -15,7 +15,8 @@
         <td>{{$index+1}}</td>
         <td>{{data.question}}</td>
         <td>{{data.answer}}</td>
-        <td><button ng-click="editFaq(data)" data-uk-modal="{target:'#edit'}" class="uk-button-primary uk-icon-pencil "></button>
+        <td>
+            <button ng-click="editFaq(data)" data-uk-modal="{target:'#edit'}" class="uk-button-primary uk-icon-pencil "></button>
             <button ng-click="deleteFaq(data)" data-uk-modal="{target:'#delete'}" class="uk-button-danger uk-icon-close "></button>
         </td>
     </tr>
@@ -38,7 +39,8 @@
                     <div class="uk-form-controls"><input type="text" ng-model="answer" value="Lorem ipsum dolor sit" class="uk-form-width-large"></div>
 
                 </div>
-                <button ng-click="submitFaq()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingFaq.add" ng-click="submitFaq()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingFaq.add" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -58,7 +60,8 @@
                     <div class="uk-form-controls"><input type="text" ng-model="FAQselected.answer" value="Lorem ipsum dolor sit" class="uk-form-width-large"></div>
 
                 </div>
-                <button ng-click="updateFaq()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="!isLoadingFaq.edit" ng-click="updateFaq()" type="submit" class=" uk-margin-large-top submitbtn">Submit</button>
+                <button ng-show="isLoadingFaq.edit" type="submit" class=" uk-margin-large-top submitbtn"><i class="uk-icon-spin uk-icon-spinner"></i></button>
             </form>
         </div>
     </div>
@@ -69,7 +72,9 @@
         <a class="uk-modal-close uk-close"></a>
         <div class="uk-width-1-1 uk-panel uk-text-center">
             <h2>Are you sure you want to delete this record?</h2>
-            <button ng-click="dropFaq()" class="uk-button-danger">Yes</button> <button class="uk-button uk-modal-close">No</button>
+            <button ng-show="!isLoadingFaq.delete" ng-click="dropFaq()" class="uk-button-danger">Yes</button>
+            <button ng-show="isLoadingFaq.delete" class="uk-button-danger"><i class="uk-icon-spin uk-icon-spinner"></i></button>
+            <button class="uk-button uk-modal-close">No</button>
         </div>
     </div>
 </div>
